fix: placed dark mode toggle to top of page

--- a/style.css
+++ b/style.css
@@ -703,7 +703,7 @@ nav {
      height: 45px;
      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
      backdrop-filter: blur(10px);
-     z-index: 0;        
+     z-index: 3000;        
    }
 
    #dark-mode-toggle:hover {
